# AutoConverter

./: .gitignore  README.md  autoconverter_stage1.py  autoconverter_stage2.py  convert.ipynb  convert_vqa.ipynb  dataset.txt  draw_relationship.ipynb  main.ipynb  main.py  main_converter.py  main_converter_reflection.py  pick_10_questions.ipynb  prompts.py  sample_examples.ipynb  select_distractor.ipynb  validate_and_improve.py  verify.ipynb
distraction-generator/: README.md  agent_generator.py  pyproject.toml
distraction-generator/distraction_generation/src/: get_reply.py
distraction-generator/distraction_generation/src/agents/generation/: concept_agent.py  main_distractor_agent.py
distraction-generator/distraction_generation/src/agents/refine/: refine_agent.py
distraction-generator/distraction_generation/src/agents/student/: high_achieving_agent.py  (+3 more)
distraction-generator/distraction_generation/src/prompts/: test_prompts.py
distraction-generator/distraction_generation/tests/: convert_mc_baseline.ipynb
distraction-generator/model_eval/: eval_outputs.ipynb  main.py
distraction-generator/model_eval/outputs/: OKVQA-1000-MC.jsonl  TextVQA-1000-MC.jsonl
distraction-generator/src/: output.py  system.py
distraction-generator/src/agents/evaluation/: evaluation_agent.py
distraction-generator/src/agents/generation/: fusion_agent.py  reasoning_agent.py  visual_interpretation_agent.py
distraction-generator/src/agents/student/: student_response_fusion_agent.py  time_pressured_intuitive_agent.py
distraction-generator/src/prompts/: eval_prompts.py
ipynb/: api.py  (+17 more)
(+14 files in other folders)
